implement trade nfts
also reference cards by db id instead of registry id
also fix .env and extensions.yml
